// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pattern-editor-field Renders \`pattern-editor-field\` with advanced tab 1`] = `
<div
  class="layout column"
>
  <!---->
  <div
    class="v-tabs v-tabs--centered theme--light"
  >
    <div
      class="v-item-group theme--light v-slide-group v-tabs-bar v-tabs-bar--is-mobile primary--text"
      role="tablist"
    >
      <div
        class="v-slide-group__prev v-slide-group__prev--disabled"
      >
        <transition-stub
          name="fade-transition"
        />
      </div>
      <div
        class="v-slide-group__wrapper"
      >
        <div
          class="v-slide-group__content v-tabs-bar__content"
        >
          <div
            class="v-tabs-slider-wrapper"
            style="transition: none;"
          >
            <div
              class="v-tabs-slider primary"
            />
          </div>
          <a
            aria-selected="true"
            class="v-tab v-tab--active"
            href="#simple"
            role="tab"
            tabindex="0"
          >
      Simple editor
          </a>
          <a
            aria-selected="false"
            class="v-tab"
            href="#advanced"
            role="tab"
            tabindex="0"
          >
      Advanced editor
          </a>
        </div>
      </div>
      <div
        class="v-slide-group__next v-slide-group__next--disabled"
      >
        <transition-stub
          name="fade-transition"
        />
      </div>
    </div>
    <div
      class="v-window v-item-group theme--light v-tabs-items"
    >
      <div
        class="v-window__container"
      >
        <transition-stub
          name=""
        >
          <div
            class="v-window-item v-window-item--active"
            id="simple"
          >
            <pattern-groups-field-stub
              attributes=""
              class="mt-2"
              groups=""
              name="patterns.groups"
            />
          </div>
        </transition-stub>
        <transition-stub
          name=""
        >
          <!---->
        </transition-stub>
      </div>
    </div>
  </div>
  <div
    class="layout align-center justify-end"
  >
    <!---->
    <!---->
  </div>
  <div
    class="flex mt-2"
  >
    <transition-stub
      class="pre-wrap"
      name="fade-transition"
    >
      <div
        class="v-alert v-sheet theme--dark error"
        role="alert"
        style="display: none;"
      >
        <div
          class="v-alert__wrapper"
        >
          <i
            aria-hidden="true"
            class="v-icon notranslate v-alert__icon material-icons theme--dark"
          >
            warning
          </i>
          <div
            class="v-alert__content"
          >
          </div>
        </div>
      </div>
    </transition-stub>
    <transition-stub
      name="fade-transition"
    >
      <div
        class="v-alert v-sheet theme--dark warning"
        role="alert"
        style="display: none;"
      >
        <div
          class="v-alert__wrapper"
        >
          <i
            aria-hidden="true"
            class="v-icon notranslate v-alert__icon material-icons theme--dark"
          >
            priority_high
          </i>
          <div
            class="v-alert__content"
          >
            <span>
              The patterns you've defined targets about 0 items. It can affect performance, are you sure ?
            </span>
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
</div>
`;

exports[`pattern-editor-field Renders \`pattern-editor-field\` with custom props 1`] = `
<div
  class="layout column"
>
  <c-pattern-field-stub
    class="mb-2"
    disabled="true"
    required=""
    return-object=""
    type="alarm"
    value="pattern-id"
  />
  <div
    class="v-tabs v-tabs--centered theme--light"
  >
    <div
      class="v-item-group theme--light v-slide-group v-tabs-bar v-tabs-bar--is-mobile primary--text"
      role="tablist"
    >
      <div
        class="v-slide-group__prev v-slide-group__prev--disabled"
      >
        <transition-stub
          name="fade-transition"
        />
      </div>
      <div
        class="v-slide-group__wrapper"
      >
        <div
          class="v-slide-group__content v-tabs-bar__content"
        >
          <div
            class="v-tabs-slider-wrapper"
            style="transition: none;"
          >
            <div
              class="v-tabs-slider primary"
            />
          </div>
          <a
            aria-selected="true"
            class="v-tab v-tab--active"
            href="#simple"
            role="tab"
            tabindex="0"
          >
      Simple editor
          </a>
          <a
            aria-selected="false"
            class="v-tab"
            href="#advanced"
            role="tab"
            tabindex="0"
          >
      Advanced editor
          </a>
        </div>
      </div>
      <div
        class="v-slide-group__next v-slide-group__next--disabled"
      >
        <transition-stub
          name="fade-transition"
        />
      </div>
    </div>
    <div
      class="v-window v-item-group theme--light v-tabs-items"
    >
      <div
        class="v-window__container"
      >
        <transition-stub
          name=""
        >
          <div
            class="v-window-item v-window-item--active"
            id="simple"
          >
            <pattern-groups-field-stub
              attributes="[object Object]"
              class="mt-2"
              disabled="true"
              groups="[object Object]"
              name="name.groups"
              readonly="true"
              required="true"
              type="alarm"
            />
          </div>
        </transition-stub>
        <transition-stub
          name=""
        >
          <!---->
        </transition-stub>
      </div>
    </div>
  </div>
  <!---->
</div>
`;

exports[`pattern-editor-field Renders \`pattern-editor-field\` with default props 1`] = `
<div
  class="layout column"
>
  <!---->
  <div
    class="v-tabs v-tabs--centered theme--light"
  >
    <div
      class="v-item-group theme--light v-slide-group v-tabs-bar v-tabs-bar--is-mobile primary--text"
      role="tablist"
    >
      <div
        class="v-slide-group__prev v-slide-group__prev--disabled"
      >
        <transition-stub
          name="fade-transition"
        />
      </div>
      <div
        class="v-slide-group__wrapper"
      >
        <div
          class="v-slide-group__content v-tabs-bar__content"
        >
          <div
            class="v-tabs-slider-wrapper"
            style="transition: none;"
          >
            <div
              class="v-tabs-slider primary"
            />
          </div>
          <a
            aria-selected="true"
            class="v-tab v-tab--active"
            href="#simple"
            role="tab"
            tabindex="0"
          >
      Simple editor
          </a>
          <a
            aria-selected="false"
            class="v-tab"
            href="#advanced"
            role="tab"
            tabindex="0"
          >
      Advanced editor
          </a>
        </div>
      </div>
      <div
        class="v-slide-group__next v-slide-group__next--disabled"
      >
        <transition-stub
          name="fade-transition"
        />
      </div>
    </div>
    <div
      class="v-window v-item-group theme--light v-tabs-items"
    >
      <div
        class="v-window__container"
      >
        <transition-stub
          name=""
        >
          <div
            class="v-window-item v-window-item--active"
            id="simple"
          >
            <pattern-groups-field-stub
              attributes=""
              class="mt-2"
              groups=""
              name="patterns.groups"
            />
          </div>
        </transition-stub>
        <transition-stub
          name=""
        >
          <!---->
        </transition-stub>
      </div>
    </div>
  </div>
  <div
    class="layout align-center justify-end"
  >
    <!---->
    <!---->
  </div>
  <div
    class="flex mt-2"
  >
    <transition-stub
      class="pre-wrap"
      name="fade-transition"
    >
      <div
        class="v-alert v-sheet theme--dark error"
        role="alert"
        style="display: none;"
      >
        <div
          class="v-alert__wrapper"
        >
          <i
            aria-hidden="true"
            class="v-icon notranslate v-alert__icon material-icons theme--dark"
          >
            warning
          </i>
          <div
            class="v-alert__content"
          >
          </div>
        </div>
      </div>
    </transition-stub>
    <transition-stub
      name="fade-transition"
    >
      <div
        class="v-alert v-sheet theme--dark warning"
        role="alert"
        style="display: none;"
      >
        <div
          class="v-alert__wrapper"
        >
          <i
            aria-hidden="true"
            class="v-icon notranslate v-alert__icon material-icons theme--dark"
          >
            priority_high
          </i>
          <div
            class="v-alert__content"
          >
            <span>
              The patterns you've defined targets about 0 items. It can affect performance, are you sure ?
            </span>
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
</div>
`;
